--- a/.github/workflows/appwrite.yml
+++ b/.github/workflows/appwrite.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI - appwrite
 
 # Controls when the workflow will run
 on:
