--- a/.github/workflows/appwrite.yml
+++ b/.github/workflows/appwrite.yml
@@ -26,18 +26,5 @@ jobs:
       - uses: actions/checkout@v3
       
       - uses: appwrite/setup-for-actions@v1
-        with:
-          endpoint: 'https://[HOSTNAME_OR_IP]/v1'
-          project: '${{ secrets.APPWRITE_PROJECT }}'
-          key: '${{ secrets.APPWRITE_API_KEY }}'
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        run: echo Hello, Appwrite from console of Mouhcine
 
